--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,7 +24,7 @@ ark-std = { version = "=0.4.0", default-features = false, features = ["parallel"
 ark-bn254 = { version = "=0.4.0" }
 ark-groth16 = { version = "=0.4.0", default-features = false, features = ["parallel"] }
 ark-poly = { version = "=0.4.1", default-features = false, features = ["parallel"] }
-ark-relations = { version = "=0.4.0", default-features = false }
+ark-relations = { git = "https://github.com/zkHubHQ/snark.git", default-features = false, branch = "distributed-groth16" }
 ark-serialize = { version = "=0.4.1", default-features = false }
 
 # decoding of data
@@ -43,7 +43,7 @@ cfg-if = "=1.0.0"
 
 [dev-dependencies]
 hex-literal = "=0.2.2"
-tokio = { version = "=1.29.1", features = ["macros"] }
+tokio = { version = "=1.34.0", features = ["macros"] }
 serde_json = "=1.0.94"
 ethers = "=2.0.7"
 
